# komga_qt

./: .gitignore  CMakeLists.txt  README.md  cmake_build.sh  io.github.bayang.Komga_qt.appdata.xml  io.github.bayang.Komga_qt.desktop  io.github.bayang.Komga_qt.json  io.github.bayang.Komga_ui.json  komga-app.pro  qmake-destination-path.pri  qmake-target-platform.pri
.github/workflows/: main.yml
komga_api/: CMakeLists.txt  author.cpp  author.h  book.cpp  book.h  bookmetadata.cpp  bookmetadata.h  bookmodel.cpp  bookmodel.h  booksfilter.cpp  booksfilter.h  collection.cpp  collection.h  collectionmodel.cpp  collectionmodel.h  komga_api.cpp  komga_api.h  komga_api.pro  komga_api_global.h  library.cpp  library.h  librarymodel.cpp  librarymodel.h  mastercontroller.cpp  mastercontroller.h  networkinformer.cpp  networkinformer.h  readlist.cpp  readlist.h  readlistmodel.cpp  readlistmodel.h  searchmodel.cpp  searchmodel.h  searchresult.cpp  searchresult.h  series.cpp  series.h  seriesfilter.cpp  seriesfilter.h  seriesfiltersortproxymodel.cpp  (+4 more)
komga_ui/: CMakeLists.txt  CardItem.qml  KomgaConfig.h.in  LibraryView.qml  SettingsView.qml  TextLink.qml  assets.qrc  asyncimageprovider.cpp  asyncimageprovider.h  asyncimageresponse.cpp  asyncimageresponse.h  bookdetailview.qml  bookpageprovider.cpp  bookpageprovider.h  bookreadview.qml  booksview.qml  bookthumbnailprovider.cpp  bookthumbnailprovider.h  komga_ui.pro  main.cpp  masterview.qml  qml.qrc  qtquickcontrols2.conf  seriesthumbnailprovider.cpp  seriesthumbnailprovider.h  seriesview.qml
komga_ui/assets/: qmldir  style.qml
komga_ui/qml/: BadgeLabel.qml  BookReadView.qml  BooksFilterComponent.qml  BooksListView.qml  CardItem.qml  CollapsibleItem.qml  CollectionsView.qml  LibraryOverflowComponent.qml  LibraryView.qml  OverflowComponent.qml  ReadListsView.qml  SearchBar.qml  SeriesFilterComponent.qml  SettingsView.qml  TextLink.qml  bookdetailview.qml  bookreadview.qml  booksview.qml  masterview.qml  seriesview.qml
